# 3DEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
doc/: CMakeLists.txt  Doxyfile.in
engine/: CMakeLists.txt  main.cc
engine/src/: CMakeLists.txt  engine.cpp
include/: common.hpp  engine.hpp
include/component/: component.hpp
include/component/camera/: camera.hpp  perspective-camera.hpp
include/component/geometry/: geometry.hpp  quad.hpp  triangle.hpp
include/component/light/: image-based-light.hpp  light.hpp  pointlight.hpp
include/component/material/: material-skybox.hpp  material.hpp
include/data/: data-container.hpp  singleton.hpp
include/lib/glad/: glad.hpp
include/rendering/: texture.hpp
include/scene/: node.hpp
include/scene/visitor/: visitor.hpp
include/shaders/: CMakeLists.txt  get_shader.hpp
include/shaders/formatted/: deferred_fs.h  deferred_vs.h  gbuffer_fs.h  gbuffer_vs.h  skyboxFragment_glsl.h  skyboxVertex_glsl.h
include/shaders/renderer/: deferred.vs  gbuffer.fs  gbuffer.vs  skyboxVertex.glsl
samples/: CMakeLists.txt
samples/camera-fps/: CMakeLists.txt  main.cpp
samples/cube/: .main.cpp.swp  CMakeLists.txt  main.cpp
samples/triangle/: CMakeLists.txt  main.cpp
samples/utils/: glfw_freecam.cpp  glfw_freecam.hpp
src/: CMakeLists.txt  engine.cpp
src/components/: component-manager.hpp  component.cpp
src/components/camera/: CMakeLists.txt  camera.cpp  perspective-camera.cpp
src/components/geometry/: CMakeLists.txt  cube.cpp  geometry.cpp  quad.cpp  triangle.cpp
src/components/light/: CMakeLists.txt  light.cpp  pointlight.cpp
src/components/material/: CMakeLists.txt  material-pbr.cpp  material-skybox.cpp  material.cpp
src/components/renderer/: renderer.cpp
src/components/transform/: CMakeLists.txt  transform.cpp
src/data/: data-container.cpp  store.cpp
src/engine/: CMakeLists.txt  engine.cpp  engine.hpp
src/engine/components/: CMakeLists.txt  component-factory.cpp  component-factory.hpp  component-manager.hpp  component.cpp  component.hpp  transform.cpp  transform.hpp
src/engine/components/camera/: CMakeLists.txt  camera.cpp  camera.hpp  perspective-camera.cpp  perspective-camera.hpp
src/engine/components/geometry/: CMakeLists.txt  cube.cpp  cube.hpp  geometry.cpp  geometry.hpp  quad.cpp  quad.hpp  triangle.cpp  triangle.hpp
src/engine/components/light/: light.cpp  light.hpp  pointlight.cpp  pointlight.hpp
src/engine/components/material/: CMakeLists.txt  material-pbr.cpp  material-pbr.hpp  material-skybox.cpp  material-skybox.hpp  material.cpp  material.hpp
src/engine/components/renderer/: CMakeLists.txt  renderer.cpp  renderer.hpp
src/engine/components/transform/: transform.cpp  transform.hpp
src/engine/data/: CMakeLists.txt  data-container.cpp  data-container.hpp  store.cpp  store.hpp
src/engine/geometry/: geometry.hpp
src/engine/rendering/: CMakeLists.txt  gbuffer.cpp  gbuffer.hpp  render-target.cpp  render-target.hpp  shader.cpp  shader.hpp  texture-2d.cpp  texture-2d.hpp  texture-cubemap.cpp  texture-cubemap.hpp  texture.cpp  texture.hpp
src/engine/scene/: CMakeLists.txt  node.cpp  node.hpp
src/engine/scene/visitor/: update-visitor.cpp  update-visitor.hpp  visitor.hpp
src/engine/shaders/: CMakeLists.txt  shader-generator.cpp  shader-generator.hpp  type-dec.cpp  type-dec.hpp
src/engine/shaders/nodes/: CMakeLists.txt  call-node.cpp  call-node.hpp  call-shader-node.cpp  call-shader-node.hpp  inline-node.cpp  inline-node.hpp  inline-shader-node.cpp  inline-shader-node.hpp  operation-node.cpp  operation-node.hpp  shader-node.cpp  shader-node.hpp  uniform-node.cpp  uniform-node.hpp  uniform-shader-node.cpp  uniform-shader-node.hpp  variable-node.cpp  variable-node.hpp  variable-shader-node.cpp  variable-shader-node.hpp
src/engine/shaders/renderer/: deferred.fs  gbuffer.fs  skyboxFragment.glsl
src/lib/: CMakeLists.txt  glad.cpp
src/rendering/: gbuffer.cpp  shader.cpp
src/scene/visitor/: CMakeLists.txt  visitor.cpp
src/utils/headers/: common.hpp
tests/: CMakeLists.txt  components.cpp  tests.cpp
tests/utils/: test_utils.hpp
